--- a/FileSearch.cbp
+++ b/FileSearch.cbp
@@ -44,6 +44,7 @@
 		<Unit filename="src/fileIO.cpp" />
 		<Unit filename="src/main.cpp" />
 		<Unit filename="src/stringHelpers.cpp" />
+		<Unit filename="testSearchFile.txt" />
 		<Extensions>
 			<code_completion />
 			<envvars />
