--- a/FileSearch.cbp
+++ b/FileSearch.cbp
@@ -39,9 +39,10 @@
 		<Unit filename="h/stringHelpers.h" />
 		<Unit filename="src/Index.cpp" />
 		<Unit filename="src/RangeInFile.cpp" />
-		<Unit filename="src/TrieNodeArray.cpp" />
 		<Unit filename="src/TrieNodeHashmap.cpp" />
 		<Unit filename="src/TrieNodeLeaf.cpp" />
+		<Unit filename="src/TrieNodeMultiChar.cpp" />
+		<Unit filename="src/TrieNodeMultiLeaf.cpp" />
 		<Unit filename="src/fileIO.cpp" />
 		<Unit filename="src/main.cpp" />
 		<Unit filename="src/stringHelpers.cpp" />
