implemented sorted vector node to be a less memory intensive alternitive to hash map nodes

--- a/FileSearch.cbp
+++ b/FileSearch.cbp
@@ -43,6 +43,7 @@
 		<Unit filename="src/TrieNodeLeaf.cpp" />
 		<Unit filename="src/TrieNodeMultiChar.cpp" />
 		<Unit filename="src/TrieNodeMultiLeaf.cpp" />
+		<Unit filename="src/TrieNodeSortedVector.cpp" />
 		<Unit filename="src/fileIO.cpp" />
 		<Unit filename="src/main.cpp" />
 		<Unit filename="src/stringHelpers.cpp" />
